# sam-ai

./: .gitignore  LICENSE  README.md  _config.yml  debug_imports.py  index.md  pyproject.toml  repo_map.txt  requirements.txt  run_sam.py  test_sam.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-test.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SETUP.md  UTILS.md
prototypes/: streamlit_app.py
scripts/: install_ollama.py
src/: __init__.py  config.py
src/sam_ai/: __init__.py  config.py
src/sam_ai/core/: __init__.py  engine.py  memory_manager.py
src/sam_ai/providers/: __init__.py  base_provider.py  ollama_provider.py  openai_provider.py
src/sam_ai/tools/: __init__.py  example_tools.py
tests/: __init__.py  test_engine.py  test_providers.py
