[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam-ai"
version = "0.1.0-alpha"
description = "A Modular, Portable, and Trauma-Informed AI Personal Assistant."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
keywords = ["ai", "assistant", "ollama", "openai", "privacy", "mental-health"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    "keyring>=23.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/sam-ai"
"Bug Tracker" = "https://github.com/your-username/sam-ai/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = ["sam_ai"]